--- a/EasyObjectMapper/EasyObjectMapper.csproj
+++ b/EasyObjectMapper/EasyObjectMapper.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Simple Object-Mapper</Description>
+    <Copyright>Dipl.-Ing.(FH) Guido Agnesmeyer</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <PackageTags>object-mapper; csharp;</PackageTags>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
